# HX-Email

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  lefthook.yml  package-lock.json  package.json  pyproject.toml  skills-lock.json
.agents/: .install-manifest.json  hooks.json  settings.json
.agents/hooks/: format_after_edit.sh  format_py.sh  strip_emoji.sh  verify_before_stop.sh  (+1 more)
.claude/: hooks.json  settings.json
.codex/: hooks.json
.codex/skills/hx-init/references/python/: README.md  check_arch.py  ci.yml  hooks-codex.json  hooks.json  pre-commit-config.yaml  pyproject.toml  verify.sh
.codex/skills/hx-init/references/python/hooks/: format_py.sh  verify_py.sh
.codex/skills/hx-init/references/python/rules/: architecture.md  naming.md
docs/: api.md  ref_api.md  sodo_api.md  重写设计说明.md
scripts/: check_arch.py  dev.sh  verify.sh
server/: pyproject.toml
server/src/hx_email/: AGENTS.md  __init__.py  app.py  auth.py  cli.py  config.py  database.py  email_accounts.py  security.py  usable_emails.py  workbench.py
server/src/hx_email/api/: audit_routes.py  dependencies.py  routes.py  schemas.py  serializers.py
server/src/hx_email/api/impl/: auth_routes.py  mail_routes.py  platform_routes.py  temp_mail_routes.py  workspace_routes.py
server/src/hx_email/api/impl/mail/: __init__.py  account_routes.py  account_transfer_routes.py  send_routes.py  token_tool_routes.py  usable_email_routes.py
server/src/hx_email/api/impl/mail/actions/: __init__.py  batch_routes.py  export_routes.py
server/src/hx_email/api/impl/mail/email/: __init__.py  providers.py  routes.py
server/src/hx_email/api/impl/mail/oauth/: __init__.py  authorization_routes.py  config_routes.py
server/src/hx_email/api/impl/mail/pool/: __init__.py  pool_admin_routes.py  pool_routes.py
server/src/hx_email/api/impl/mail/refresh/: __init__.py  refresh_log_routes.py  refresh_routes.py
server/src/hx_email/api/impl/overview/: __init__.py  overview_refresh_routes.py  overview_routes.py
server/src/hx_email/api/impl/plugins/: __init__.py  config_routes.py  crud_routes.py
server/src/hx_email/api/impl/settings/: settings_routes.py  settings_test_routes.py
server/src/hx_email/server/: auth.py  data_transfer.py  facade.py  plugins.py  settings_service.py
server/src/hx_email/server/admin/: __init__.py
server/src/hx_email/server/admin/impl/: __init__.py  audit_models.py  audit_policy.py  audit_service.py  audit_store.py  pool_admin_service.py
server/src/hx_email/server/external_api/: __init__.py
server/src/hx_email/server/external_api/impl/: auth.py  pool_service.py  system_service.py  temp_mail_service.py
server/src/hx_email/server/external_api/impl/mail/: __init__.py  helpers.py  mail_service.py  wait_service.py
server/src/hx_email/server/mail/: __init__.py  email_accounts.py  mail_pool.py  send_mail.py  temp_mail.py  usable_emails.py  verification.py
server/src/hx_email/server/mail/google_oauth/: __init__.py
server/src/hx_email/server/mail/google_oauth/impl/: __init__.py  flow.py  tokens.py
server/src/hx_email/server/mail/graph/: __init__.py  fallback_provider.py  graph_client.py  graph_helpers.py
server/src/hx_email/server/mail/imap/: __init__.py  imap_helpers.py  imap_oauth.py  imap_provider.py  message_store.py
server/src/hx_email/server/mail/imap/impl/: fetch_batch.py  folder_candidates.py  outlook_fallback.py  proxy.py
server/src/hx_email/server/mail/impl/: account_transfer.py  email_fetch_service.py  email_service.py  oauth_tool.py  providers.py  refresh_log_service.py  refresh_service.py
server/src/hx_email/server/mail/impl/accounts/: __init__.py  account_helpers.py  account_service.py  account_transfer.py  batch_service.py  import_service.py
server/src/hx_email/server/mail/impl/fetch/: distribution.py  options.py  reader.py  targets.py
server/src/hx_email/server/mail/impl/sending/: __init__.py  base.py  credentials.py  delivery.py  providers.py  router.py
server/src/hx_email/server/mail/impl/temp_mail/: __init__.py  temp_mail_options.py  temp_mail_service.py
server/src/hx_email/server/mail/verification/: __init__.py  addresses.py  db.py  extract.py  search.py
server/src/hx_email/server/workspace/: groups.py  overview.py  platforms.py  workbench.py
server/src/hx_email/server/workspace/impl/: overview_cache.py  overview_service.py
server/tests/: test_account_email_update.py  test_account_mail_fetch.py  test_account_mail_fetch_incremental.py  test_audit.py  test_authentication.py  test_cli.py  test_data_transfer.py  test_database_migrations.py  test_email_accounts.py  test_fallback_mail_provider.py  test_gmail_alias_delivery.py  test_gmail_import_credentials.py  test_google_oauth.py  test_graph_mail_fallback.py  test_graph_proxy.py  test_health.py  test_imap_provider.py  test_mail_pool.py  test_outlook_plus_subaddress_repro.py  test_platform_plus_email.py  test_platforms.py  test_refresh_proxy.py  test_secret_encryption.py  test_send_debug_email.py  test_settings_email.py  test_temp_mail.py  test_usable_email_workbench.py  test_user_workspace.py  test_verification.py
web/: biome.json  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.e2e.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
(+170 files in other folders)
