[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.8.6", "mypy>=1.14.1", "pre-commit>=4.0.0"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["ref", "web"]

[tool.ruff.lint]
# Ruff 默认规则 + 类型标注强制(ANN) + 中文命名拦截(PLC2401)
select = [
    "E", "F", "W", "I", "UP", "ANN", "B", "SIM", "TID", "RUF", "N",
    "PLC2401",  # 禁止非ASCII 变量/函数/类名 (拦 AI 中文命名幻觉)
    "PLC2403",  # 禁止 import ... as 中文别名
]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ANN", "S101"]
"server/tests/**" = ["ANN", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = "^(ref|web|server/tests)/"
