[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
]

[dependency-groups]
dev = ["ruff>=0.8.6", "mypy>=1.14.1", "pre-commit>=4.0.0"]

[tool.ruff]
target-version = "py312"
line-length = 100
# 排除非项目代码
exclude = [
    "ref/",
    ".claude/skills/",
    ".agents/skills/",
    ".codex/skills/",
    "*.bak",
    "*.bak_*",
    "*~",
]

[tool.ruff.lint]
# Ruff 默认规则 + 类型标注强制(ANN) + 中文命名拦截(PLC2401)
select = [
    "E", "F", "W", "I", "UP", "ANN", "B", "SIM", "TID", "RUF", "N",
    "PLC2401",  # 禁止非ASCII 变量/函数/类名 (拦 AI 中文命名幻觉)
    "PLC2403",  # 禁止 import ... as 中文别名
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**" = ["ANN", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [
    '^ref/',
    '^\.claude/skills/',
    '^\.agents/skills/',
    '^\.codex/skills/',
    '\.bak',
    '~$',
]
