[project]
name = "hx-email-server"
version = "0.1.0"
description = "FastAPI backend for HX Email"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
hx-email = "hx_email.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.14.1",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hx_email"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [
    '^\.venv/',
    '^tests/',
]

[[tool.mypy.overrides]]
module = "croniter"
ignore_missing_imports = true
