[project]
name = "app"
version = "0.1.0"
requires-python = ">={{PY_VER}}"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.8.6", {{CHECKER_DEP_ENTRY}}"pre-commit>=4.0.0"]

[tool.ruff]
target-version = "{{RUFF_TARGET}}"
line-length = 100
exclude = [
    "ref/",
    ".claude/skills/",
    ".agents/skills/",
    ".codex/skills/",
    "*.bak",
    "*.bak_*",
    "*~",
]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "ANN", "B", "SIM", "TID", "RUF", "N",
    "PLC2401",
    "PLC2403",
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
{{TEST_IGNORE}}
{{CHECKER_SECTION}}
